<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_below="@id/app_bar_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

<com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar_layout_settings"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:gravity="center_vertical"
    android:minHeight="?attr/actionBarSize">

    <TextView
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="15dp"
        android:textColor="@color/schriftfarbe"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</com.google.android.material.appbar.AppBarLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:fitsSystemWindows="true"
    android:layout_below="@id/app_bar_layout_settings"
    tools:context=".Clock_Setting_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/header_title"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/clock_setting_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/header_chose_time"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_title"
        android:layout_centerHorizontal="true"
        android:text="@string/set_alarm_time_header"
        />

    <TimePicker
        android:id="@+id/chosen_clock_time"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/header_chose_time"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:timePickerMode="spinner"
        />

    <TextView
        android:id="@+id/header_chose_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chosen_clock_time"
        android:layout_centerHorizontal="true"
        android:text="@string/set_days_header"
        />

        <HorizontalScrollView
            android:id="@+id/view_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/header_chose_days">

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_monday"
                    android:text="@string/Monday_short"
                    android:layout_span="2"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_tuesday"
                    android:text="@string/Tuesday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_wednesday"
                    android:text="@string/Wednesday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_thursday"
                    android:text="@string/Thursday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_friday"
                    android:text="@string/Friday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_saturday"
                    android:text="@string/Saturday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/chose_sunday"
                    android:text="@string/Sunday_short"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/roundedbutton_disabled"
                    android:textColor="@color/white"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    />
            </TableRow>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/chose_volume_header"
            android:text="@string/chose_volume_header"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/view_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <SeekBar
            android:id="@+id/chose_clock_volume"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/chose_volume_header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:max="20"
            android:progress="0" />

        <TextView
            android:id="@+id/clock_volume_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/chose_clock_volume"
            android:layout_alignStart="@id/chose_clock_volume"
            android:layout_marginStart="-2dp"
            android:layout_marginBottom="-35dp"
            android:text="@string/load_value"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/header_chose_folder"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chose_clock_volume"
            android:layout_centerHorizontal="true"
            android:text="@string/chose_folder_header"
            />

        <Button
            android:id="@+id/chose_folder"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_chose_folder"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/file_chooser_placeholder"
            android:textColor="@color/schriftfarbe" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_clock_settings"
            android:layout_marginTop="10dp"
            android:text="@string/save_clock_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/chose_folder"
            android:layout_centerHorizontal="true"
            android:background="@color/gray"
            android:textColor="@color/schriftfarbe"
            />

    </RelativeLayout>
    </ScrollView>
</RelativeLayout>