<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

   <com.google.android.material.appbar.AppBarLayout
       android:id="@+id/app_bar_layout"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@color/background_color"
       android:gravity="center_vertical"
       android:minHeight="?attr/actionBarSize">

       <TextView
           android:text="@string/app_name"
           android:textStyle="bold"
           android:textSize="20sp"
           android:layout_marginLeft="15dp"
           android:textColor="@color/schriftfarbe"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"/>

   </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/content_desc_create_new_alarm"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/header_title"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/clock_overview_header"
        />

    <TextView
        android:id="@+id/next_alarm_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_alignStart="@id/header_title"
        android:layout_below="@id/header_title"
        android:text="@string/next_Alarm"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alarm_clock_overview_list"
        android:layout_below="@id/next_alarm_time"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/header_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>